--- a/source/index.html
+++ b/source/index.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>hello World</title>
+    <title>Bài Tập Tạo Danh Sách</title>
 </head>
 <body>
-<h1>xin chao</h1>
+<ul>
+    <li style="font-weight: bold">Việt Nam</li>
+    <ol>
+        <li>Hà Nội</li>
+        <li>Sài Gòn</li>
+        <li>Huế</li>
+        <li>Đà Nẵng</li>
+    </ol>
+    <li style="font-weight: bold">Hoa Kỳ</li>
+    <ol>
+        <li>New York</li>
+        <li>Los Angeles</li>
+        <li>Chicago</li>
+        <li>Houston</li>
+    </ol>
+    <li style="font-weight: bold">Trung Quốc</li>
+    <ol>
+        <li>Beijing</li>
+        <li>Chongqing</li>
+        <li>Shanghai</li>
+        <li>Tianjin</li>
+    </ol>
+</ul>
 </body>
 </html>
