--- a/source/news.html
+++ b/source/news.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>xin chao</title>
+    <title>CV Cá Nhân</title>
 </head>
 <body>
- <h1>Welcome to Index Page</h1>
+ <h1>CV Cá Nhân</h1>
+ <hr>
+ <img src="https://phunuvietnam.mediacdn.vn/media/news/33abffcedac43a654ac7f501856bf700/anh-profile-tiet-lo-g-ve-ban-1.jpg" alt="ảnh đại diện" width="200">
+ <p>Họ và tên: <span style="font-weight: bold">Trần Văn A</span></p>
+ <p>Địa chỉ: Hà Nội, Việt Nam</p>
+ <p>Số điện thoại: 012345678</p>
+ <p>Gmail: <a href="">abc@gmail.com</a></p>
+ <hr>
+ <video width="260" height="180" controls>video giới thiệu</video>
+ <audio src=""></audio>
 </body>
 </html>
